--- a/index.html
+++ b/index.html
@@ -28,6 +28,22 @@
             <img src="images/robin-bg.png" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/my-bg1.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a Webdeveloper</h2>
+            <p>
+                I already learn basic html and css and I also know to push into git and how to use git and I think it
+                will help me a lot in my future so thank you everyone ....
+            </p>
+            <a class="link-button" target="_blank" href=" "> Download Resume</a>
+        </div>
+
+
+    </section>
 
 
 </body>
