--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Monjuruls</span> World !!</h1>
@@ -28,7 +28,7 @@
             <img src="images/robin-bg.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/my-bg1.png" alt="">
         </div>
@@ -44,6 +44,38 @@
 
 
     </section>
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div id="pro" class="experience-item">
+                <h2>Full Stack Webdeveloper</h1>
+                    <h3>2022-present | Pro level developer</h3>
+                    <p>
+                        A full stack web developer is a person who can develop both client and server software. In
+                        addition
+                        to
+                        mastering HTML and CSS, he/she also knows how to: Program a browser (like using JavaScript,
+                        jQuery,
+                        Angular, or Vue) Program a server (like using PHP, ASP, Python, or Node)
+                    </p>
+            </div>
+            <div id="baby" class="experience-item">
+                <h2>Baby Webdeveloper</h2>
+                <h3>2022-2024 | Hero Learner</h3>
+                <p>Web Developer responsibilities include:
+                    Writing well designed, testable, efficient code by using best software development practices.
+                    Creating
+                    website layout/user interfaces by using standard HTML/CSS practices. Integrating data from
+                    various
+                    back-end services and databases.</p>
+            </div>
+        </div>
+
+    </section>
+    <footer>
+        <p>Monjurul Alam trying to learn web developing</p>
+
+    </footer>
 
 
 </body>
